fix card image size on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,7 @@ input:focus {
 
 .nft-card-img {
 	width: 100%;
+	height: auto;
 }
 
 .collection-stats {
